src/test/ui/numbers-arithmetic/overflowing-rsh-2.stderr
error: this arithmetic operation will overflow
  --> $DIR/overflowing-rsh-2.rs:7:14
   |
LL |     let _x = -1_i32 >> -1;
   |              ^^^^^^^^^^^^ attempt to shift right by -1_i32 which would overflow
   |
note: the lint level is defined here
  --> $DIR/overflowing-rsh-2.rs:4:9
   |
LL | #![deny(arithmetic_overflow, const_err)]
   |         ^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

